<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TxtName"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="NAME"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxtId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="ID"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/LblCarImg_Big"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:background="#8DAAAAAA"
            android:gravity="center"
            android:padding="5dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18px"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBrand_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/brand_car_label_details"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TxtBrand"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:text="@string/brand_car_label"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtModel_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/model_car_label_details"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TxtModel"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:text="@string/model_car_label"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCylinders_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/cylinders_car_label_details"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TxtCylinders"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:text="@string/cylinders_car_label"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPrice_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/price_car_label_details"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TxtPrice"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:text="@string/price_car_label"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>