<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_margin="15dp"
            android:background="@drawable/listitem_auto_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/LblCarImg_Small"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:contentDescription="@string/name_car_label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:id="@+id/LblListId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/id_car_label"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/LblListBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_car_label" />

                <TextView
                    android:id="@+id/LblListName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_car_label" />

                <TextView
                    android:id="@+id/LblListModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/model_car_label"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>